--- a/android/examples/PubnubBatteryUsageTest/res/values/strings.xml
+++ b/android/examples/PubnubBatteryUsageTest/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Pubnub Battery Test</string>
+    <string name="app_name">PubnubBatteryUsageTest</string>
     <string name="pubnub">Pubnub</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
