--- a/android/examples/PubnubSubscribe/res/values/strings.xml
+++ b/android/examples/PubnubSubscribe/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <string name="app_name">PubnubSubscribe</string>
+    <string name="app_name">Pubnub Demo</string>
 
 </resources>
